blogging-platform-api: Updated the junit test cases with the help of agents.